[gd_scene load_steps=5 format=3 uid="uid://bua2fnn58w10t"]

[ext_resource type="LabelSettings" uid="uid://mb0o2fex4fry" path="res://styles/labels/label_title_48.tres" id="1_rj3ao"]
[ext_resource type="Script" uid="uid://cs6djd1alitx2" path="res://scenes/play_quiz.gd" id="1_yyob3"]
[ext_resource type="LabelSettings" uid="uid://dt6e1w8og3low" path="res://styles/labels/label_content_32.tres" id="2_xrcdd"]
[ext_resource type="Texture2D" uid="uid://c3lo5yukfegs5" path="res://assets/textures/icons/more-options-ellipsis-icon.png" id="3_eoxda"]

[node name="PlayQuiz" type="CanvasLayer"]
script = ExtResource("1_yyob3")

[node name="TeamBox" type="HBoxContainer" parent="."]
visible = false
anchors_preset = -1
offset_right = 99.0
offset_bottom = 34.0
theme_override_constants/separation = 15

[node name="TeamScore" type="Label" parent="TeamBox"]
layout_mode = 2
text = "0"
label_settings = ExtResource("2_xrcdd")

[node name="TeamName" type="Label" parent="TeamBox"]
layout_mode = 2
label_settings = ExtResource("2_xrcdd")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 75

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HEADER"
label_settings = ExtResource("1_rj3ao")
horizontal_alignment = 1

[node name="QuestionsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 5

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kategorie 1"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kategorie 2"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kategorie 3"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Kategorie 4"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "40"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 2

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label8" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label9" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label10" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "60"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 2

[node name="Label11" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label12" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label13" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label14" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label15" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "80"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 2

[node name="Label16" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label17" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label18" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label19" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label20" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "100"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 2

[node name="Label21" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label22" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label23" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="Label24" type="Label" parent="MarginContainer/VBoxContainer/QuestionsGrid"]
layout_mode = 2
text = "?"
label_settings = ExtResource("2_xrcdd")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TeamsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
size_flags_stretch_ratio = 0.3
theme_override_constants/separation = 10

[node name="DotsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_eoxda")
